--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -10,7 +10,7 @@ spec:
     gitServer: https://github.com
     provider: kubernetes
   ingress:
-    domain: ""
+    domain: "34.118.108.125.nip.io"
     externalDNS: false
     namespaceSubDomain: -jx.
     tls:
